Se agrega codeudores
