# Controllers/VentasController.cs
@@ -158,7 +158,7 @@ public class VentasController : BaseApiController
             });
         }
     }
-    
+
     //para obtener refuerzos
     [HttpGet("{idVenta}/Refuerzos")]
     [ProducesResponseType(typeof(RefuerzoResponse), StatusCodes.Status200OK)]
@@ -209,6 +209,32 @@ public class VentasController : BaseApiController
             });
         }
     }
+
+    //insertar co-deudor
+    [HttpPost("InsertarCoDeudor")]
+    [ProducesResponseType(typeof(int), StatusCodes.Status200OK)]
+    [ProducesResponseType(StatusCodes.Status204NoContent)]
+    [ProducesResponseType(typeof(ErrorResponse), StatusCodes.Status400BadRequest)]
+    [ProducesResponseType(typeof(string), StatusCodes.Status401Unauthorized)]
+    [ProducesResponseType(typeof(ErrorResponse), StatusCodes.Status500InternalServerError)]
+    public async Task<ActionResult> InsertarCoDeudor(VentaCoDeudorRequest request)
+    {
+        try
+        {
+            var resultado = await _service.InsertarCoDeudor(request);
+            return Ok(resultado);
+        }
+        catch (System.Exception e)
+        {
+            _Logger.LogError(e, "Ocurrió un error al insertar el co-deudor");
+            return StatusCode(500, new ErrorResponse
+            {
+                ErrorType = Enums.ErrorType.error_interno_servidor,
+                ErrorDescripcion = "Ocurrió un error en el proceso de inserción del co-deudor"
+            });
+        }
+    }
+
     //Eliminar venta a cuotas
     [HttpDelete("EliminarVentaCuotas/{idVenta}")]
     [ProducesResponseType(typeof(bool), StatusCodes.Status200OK)]
