# Entities/VentaCoDeudor.cs
@@ -1,0 +1,10 @@
+namespace ApiComercial.Entities
+{
+    public class VentaCoDeudor
+    {
+        public int VentaCoDeudorId { get; set; }
+        public int VentaId { get; set; }
+        public int ClienteId { get; set; }
+        public DateTime FechaAgregado { get; set; }
+    }
+}
