# Infraestructure/Repositories/Interfaces/IVentasRepository.cs
@@ -25,4 +25,5 @@ public interface IVentasRepository
     Task<IEnumerable<ListaAtrasoResponse>> ObtenerListaAtrasos();
     Task<int> CantidadCuotasAtrasadas();
     Task<List<ReporteVentaResponse>> ObtenerReporteVentasAsync(ReporteVentasRequest request);
+    Task<int> InsertarCoDeudor(VentaCoDeudorRequest request);
 }   
