# Models/Request/VentaCoDeudorRequest.cs
@@ -1,0 +1,8 @@
+namespace ApiComercial.Models.Request
+{
+    public class VentaCoDeudorRequest
+    {
+        public int VentaId { get; set; }
+        public int ClienteId { get; set; }
+    }
+}
